--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^10.12.2",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.378.0",
+    "mongodb": "^6.7.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
